--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Barbearia Alura</title>
     </head>
     <body>
-        <h1 style="text-align: center; background: #f00404">Sobre a Barbearia Alura</h1>
+        <h1 style="text-align:center; background: #2bf004">Sobre a Barbearia Alura</h1>
 
         <p style=>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba.
         Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
